--- a/Azaz/j2.html
+++ b/Azaz/j2.html
@@ -10,7 +10,9 @@
     <script>
       for (let a = 0; a < 10; a++) {
         document.write(a * a + "<br>");
+        document.write("FARIG AADMI")
       }
     </script>
   </body>
 </html>
+
