--- a/Azaz/iNDEX.html
+++ b/Azaz/iNDEX.html
@@ -5,21 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      body {
+        font-size: 32px;
+        color: rgb(255, 51, 0);
+        background-color: #1f1f1f;
+        font-family: sans-serif;
+      }
+      p {
+        transition: 2s all;
+        cursor: pointer;
+      }
+    </style>
     <script>
-      // program to generate a multiplication table
-
-      // take input from the user
-      const number = parseInt(prompt("Enter an integer: "));
-
-      //creating a multiplication table
-      for (let i = 1; i <= 1000; i++) {
-        // multiply i with number
-        const result = i * number;
-
-        // display the result
-        document.write(result + "<br>");
+      function hello() {
+        let a = [
+          {
+            Name: "Azaz",
+            FullName: "Azaz Aziz",
+            Number: "0123273623",
+            CNIC: "34234234234234",
+          },
+        ];
+        b = a.map(hi);
+        document.getElementById("demo").innerHTML = b;
+        function hi(x) {
+          return x.Name + "<br> " + x.Number + "<br> " + x.FullName;
+        }
+      }
+      function h() {
+          document.getElementById("demo").style.marginLeft = "1000px";
+        document.getElementById("demo").style.color = "green";
       }
     </script>
   </head>
-  <body></body>
+  <body>
+    <p id="demo" onclick="h()"></p>
+    <button onclick="hello()">Click Me</button>
+  </body>
 </html>
