--- a/Azaz/j2.html
+++ b/Azaz/j2.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <script>
-      for (let a = 0; a < 10; a++) {
-        document.write(a * a + "<br>");
-        document.write("FARIG AADMI")
+      var a, b;
+      b = 2;
+      for (let a = 0; a < 20; a++) {
+        document.write(a * b + " " + "<br>");
       }
     </script>
   </body>
 </html>
-
