--- a/Azaz/sarim.html
+++ b/Azaz/sarim.html
@@ -13,42 +13,26 @@
     <style>
       body {
         font-family: sans-serif;
+        background: #1f1f1f;
       }
       td {
         font-weight: bold;
         color: rgb(87, 1, 1);
         cursor: pointer;
+        background-color: #f1f1f1;
       }
       td:hover {
         color: red;
       }
-      #demo {
-        background-color: green;
-        height: 500px;
-        width: 500px;
-        transition: 4s;
-        cursor: pointer;
-      }
-      #demoP {
-        display: none;
-        transition: 0.5s;
-        padding: 250px 0;
-        font-size: 32px;
-      }
     </style>
   </head>
   <body>
-    <div id="demo" onclick="myfunction()" on>
-      <center>
-        <div id="demoP">Lorem, ipsum dolor.</div>
-      </center>
-    </div>
     <h1>Show data in table by using Jquery</h1>
-    <table border="10" style="width: 100%; text-align: center">
+    <table border="5" style="width: 100%; text-align: center">
       <thead>
         <tr>
           <td>Name</td>
-          <td >Class</td>
+          <td>Class</td>
           <td>Roll no</td>
           <td>Age</td>
           <td>Nationality</td>
@@ -99,22 +83,6 @@
           );
           $("input[type=text], textarea").val("");
         });
-
-        function myfunction() {
-          document.getElementById("demo").style.backgroundColor = "red";
-          document.getElementById("demo").style.margin = "0  200px";
-          document.getElementById("demo").style.width = "700px";
-          document.getElementById("demo").style.height = "700px";
-
-          document.getElementById("demoP").style.display = "block";
-        }
-        function Myfunction() {
-          document.getElementById("demo").style.backgroundColor = "green";
-          document.getElementById("demo").style.margin = "0 0";
-          document.getElementById("demoP").style.display = "none";
-          document.getElementById("demo").style.width = "500px";
-          document.getElementById("demo").style.height = "500px";
-        }
       </script>
     </div>
   </body>
